# bqskit-qiskit-synthesis-plugin

./: .stestr.conf  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
bqskit_plugin/: plugin.py
bqskit_plugin/tests/: test_unitary_synthesis.py
