[metadata]
name = bqskit-qiskit-synthesis-plugin
summary =  A bqskit based unitary synthesis plugin for Qiskit
description-file =
    README.md
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
requires-python = >=3.6

[files]
packages =
    bqskit_plugin

[entry_points]
qiskit.unitary_synthesis =
    bqskit = bqskit_plugin.plugin:BqskitSynthesisPlugin
